Small bugfix for layout in collapsed mode

--- a/content.css
+++ b/content.css
@@ -51,6 +51,7 @@
 }
 #jiralyzer.collapsed .jl-content{
     height: 0;
+    min-height: 0;
 }
 
 #jiralyzer p{
